# libpdsramm

./: CMakeLists.txt  ChangeLog  README.md  pkgconfigdat.pc.in
doc/: README.md.in
extras/backup/: Duo  Duo.cpp  Duo.hpp  testprog_duo.cpp
extras/qtcreator/: README.md  clean_all.sh  libpdsra.pro
manual/: CMakeLists.txt  Doxyfile.in  Doxymainpage.h.in  bibliopds.bib
manual/globales/: doxygen.css  footer.html  header.html
manual/imagenes/: Bilinear.dia  DiagramaXcorr.dia  PDSPLibrary.xcf  colormap_steps.m  colormap_steps.txt  compilar.dot  dialatex2png.sh  enlazar.dot  genera.sh  logo-text.xcf  matrix.tex  vector.tex
package/: CMakeLists.txt
src/biblioteca/: ColVector.cpp  Eye.cpp  FuncArrayDataset.cpp  FuncArrayLabeling.cpp  FuncColVector.cpp  FuncMatrix.cpp  FuncMatrixImage.cpp  FuncMatrixRotations.cpp  FuncVector.cpp  FuncVectorPoly.cpp  MathMatrix.cpp  Matrix.cpp  MatrixFunc.cpp  MatrixInner.cpp  MatrixMath.cpp  MatrixRotations.cpp  Matrix_algebra.cpp  Matrix_getset.cpp  Matrix_getset_extras.cpp  Matrix_init.cpp  Matrix_math.cpp  Matrix_operator.cpp  Matrix_operator_accumulate.cpp  Matrix_operator_binario.cpp  Matrix_operator_unario.cpp  Matrix_rows.cpp  Matrix_state.cpp  Matrix_static.cpp  Matrix_static_array.cpp  Matrix_static_matrix.cpp  Matrix_statistics.cpp  Matrix_varied.cpp  Ones.cpp  RaBmp.cpp  RaFile.cpp  RaIndices.cpp  RaString.cpp  RaTime.cpp  RaTools.cpp  RealArraysTools.cpp  (+8 more)
src/biblioteca/Array/: Array.cpp  Array_dsp.cpp  Array_export.cpp  Array_getset.cpp  Array_init.cpp  Array_region.cpp  Array_state.cpp  Array_static.cpp  Array_static_array.cpp  Array_static_array_export_bmp.cpp  Array_static_array_export_csv.cpp  Array_static_array_export_matfile.cpp  Array_static_array_export_txt.cpp  Array_static_array_string.cpp  Array_statistic.cpp  Array_varied.cpp
src/biblioteca/Buffer/: Buffer.cpp  Buffer_getset.cpp  Buffer_varied.cpp
src/biblioteca/Fir/: Fir.cpp  Fir_evaluate.cpp  Fir_varied.cpp
src/biblioteca/Matrix/: Matrix.cpp  Matrix_algebra.cpp  Matrix_apply.cpp  Matrix_dsp.cpp  Matrix_exotic.cpp  Matrix_export.cpp  Matrix_find.cpp  Matrix_getset.cpp  Matrix_getset_extras.cpp  Matrix_init.cpp  Matrix_memory.cpp  Matrix_operate.cpp  Matrix_operator.cpp  Matrix_operator_accumulate.cpp  Matrix_operator_binario.cpp  Matrix_operator_unario.cpp  Matrix_regions.cpp  Matrix_rows.cpp  Matrix_state.cpp  Matrix_static_array.cpp  Matrix_static_array_export_bmp.cpp  Matrix_static_matrix.cpp  Matrix_statistics.cpp  Matrix_varied.cpp
src/biblioteca/Position/: Position.cpp
src/biblioteca/RegionRect/: RegionRect.cpp  RegionRect_intersection.cpp  RegionRect_move.cpp  RegionRect_save_load.cpp  RegionRect_state.cpp  RegionRect_static_regionrect.cpp  RegionRect_varied.cpp
src/biblioteca/Vector/: Vector.cpp  Vector_memory.cpp  Vector_operator_accumulate.cpp  Vector_operator_binario.cpp  Vector_operator_unario.cpp
src/headers/PDS/: ColVector.hpp  Eye  Eye.hpp  Matrix  Matrix.hpp  Ones  Ones.hpp  RealArrays  RealArrays.hpp  RealArraysDefines  RealArraysDefines.hpp  Vector
src/headers/Pds/: Array  Array.hpp  Buffer  Buffer.hpp  ColVector.hpp  Colormap  Colormap.hpp  Eye  Eye.hpp  Fir  Fir.hpp  FuncArrayDataset  FuncArrayDataset.hpp  FuncArrayLabeling  FuncArrayLabeling.hpp  FuncColVector  FuncColVector.hpp  FuncMatrix  FuncMatrix.hpp  FuncMatrixImage  FuncMatrixImage.hpp  FuncMatrixRotation  FuncMatrixRotation.hpp  FuncVector  FuncVector.hpp  FuncVectorPoly  FuncVectorPoly.hpp  MathMatrix  MathMatrix.hpp  Matrix  Matrix.hpp  MatrixFunc  MatrixFunc.hpp  MatrixInner.hpp  MatrixMath  MatrixMath.hpp  MatrixRotation  MatrixRotation.hpp  Ones  Ones.hpp  (+42 more)
test/: CMakeLists.txt  example.cpp  example_matrix_algebra.cpp  example_matrix_assignment.cpp  example_matrix_create.cpp  example_matrix_export.cpp  example_matrix_fill.cpp  example_matrix_getset.cpp  example_matrix_getset_extras.cpp  example_matrix_math_integration.cpp  example_print_messages.cpp  example_vector_create.cpp  example_vector_poly.cpp  example_vector_statistics.cpp  exampleprog.cpp  filedat.txt  octave-workspace  test_array_create.cpp  test_array_region.cpp  test_array_resize.cpp  test_fir_create.cpp  test_funcarraylabeling.cpp  test_matrix_apply.cpp  test_matrix_assignment.cpp  test_matrix_create.cpp  test_matrix_export_bmp.cpp  test_matrix_export_bmp2.cpp  test_matrix_export_bmp3.cpp  test_matrix_getset_extras.cpp  test_matrix_region.cpp  test_matrix_resize.cpp  test_regionrect_create.cpp  test_regionrect_subsets.cpp  test_vector_create.cpp  test_vector_operator_unit.cpp  test_vector_poly.cpp  test_vector_statistics.cpp  testprog_colvector.cpp  testprog_defines.cpp  testprog_funccolvector.cpp  (+30 more)
